--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jonmort.plugin</groupId>
     <artifactId>aoso</artifactId>
-    <version>1.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>aoso</name>
     <description>REST api for speakeasy using active objects</description>
